--- a/package.json
+++ b/package.json
@@ -6,30 +6,23 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint"
   },
   "dependencies": {
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.554.0",
-    "next": "16.0.1",
-    "react": "19.2.0",
-    "react-dom": "^19.1.0",
-    "react-hook-form": "^7.66.1",
-    "react-icons": "^5.5.0",
-    "react-toastify": "^11.0.5",
-    "tailwind-merge": "^3.4.0",
-    "zod": "^4.1.12"
+    "mysql2": "^3.11.3",
+    "next": "^16.0.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.1",
-    "tailwindcss": "^4",
-    "tw-animate-css": "^1.4.0",
-    "typescript": "^5"
+    "@types/node": "^20.17.10",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "autoprefixer": "^10.4.22",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.25",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
+    "typescript": "^5.7.3"
   }
 }
